--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "commander": "^10.0.0",
     "eslint": "^8.32.0",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.27.5"
+    "eslint-plugin-import": "^2.27.5",
+    "jest": "^29.3.1"
   }
 }
