--- a/package.json
+++ b/package.json
@@ -26,5 +26,8 @@
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.27.5",
     "jest": "^29.3.1"
+  },
+  "dependencies": {
+    "lodash": "^4.17.21"
   }
 }
