--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "eslint": "^8.32.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.27.5",
-    "jest": "^29.3.1"
+    "jest": "^29.3.1",
+    "js-yaml": "^4.1.0"
   },
   "dependencies": {
     "lodash": "^4.17.21"
