--- a/package.json
+++ b/package.json
@@ -21,14 +21,14 @@
   },
   "homepage": "https://github.com/nikivavlt/frontend-project-46#readme",
   "devDependencies": {
-    "commander": "^10.0.0",
     "eslint": "^8.32.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.27.5",
-    "jest": "^29.3.1",
-    "js-yaml": "^4.1.0"
+    "jest": "^29.3.1"
   },
   "dependencies": {
+    "commander": "^10.0.0",
+    "js-yaml": "^4.1.0",
     "lodash": "^4.17.21"
   }
 }
