Add json formatter

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,6 +12,6 @@
         "sourceType": "module"
     },
     "rules": {
-      "import/extensions": ["never"]
+      "import/extensions": 0
     }
 }
