Edit README.md, tools.js, compare.js, formatters/index.js

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "@hexlet/code",
+  "name": "difference-finder",
   "version": "1.0.0",
   "type": "module",
-  "description": "[![Actions Status](https://github.com/nikivavlt/frontend-project-46/workflows/hexlet-check/badge.svg)](https://github.com/nikivavlt/frontend-project-46/actions)",
+  "description": "Difference finder - package compares two configuration files (.json, .yml extensions) and shows the difference.",
   "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -28,7 +28,6 @@
   },
   "dependencies": {
     "commander": "^10.0.0",
-    "js-yaml": "^4.1.0",
-    "lodash": "^4.17.21"
+    "js-yaml": "^4.1.0"
   }
 }
